jupyter-hub/jupyter-hub/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hub
  labels:
    component: jupyter
spec:
  replicas: 1
  selector:
    matchLabels:
      component: jupyter
  template:
    metadata:
      labels:
        component: jupyter
    spec:
      serviceAccountName: hub
      containers:
        - name: jupyter-hub
          #image: kienmn97/jupyter-hub:1.1.0
          image: kienmn97/jupyter-hub-spark-notebook:1.1.0
          #image: lasid/lasid-jupyter:latest
          imagePullPolicy: Always
          command: ["jupyterhub", "--config", "/srv/jupyterhub/jupyterhub_config.py"]
          ports:
            - containerPort: 8081
          volumeMounts:
            #- mountPath: /srv/jupyterhub/jupyterhub_config.py
            #  subPath: jupyterhub_config.py
            #  name: config
            #- mountPath: /etc/jupyterhub/config/
            #  name: config
            #- mountPath: /etc/jupyterhub/secret/
            #  name: secret
            - mountPath: /svr/jupyterhub/
              name: hub-db-dir
          resources:
            requests:
              cpu: 100m
      volumes:
        #- name: config
        #  configMap:
        #    name: hub-config
        #- name: config
        #  configMap:
        #    name: hub-config
        #- name: secret
        #  secret:
        #    secretName: hub-secret
        - name: hub-db-dir
          persistentVolumeClaim:
            claimName: hub-db-dir
