jupyter-hub/jupyter-hub/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hub
  namespace: default
  labels:
    component: jupyter
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
  selector:
    component: jupyter
