jupyter-hub/jupyter-hub/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyter-hub
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      -lasidtest.uece.br
      secretName: lasidtest.uece.br-secret
  rules:
    - host: "lasidtest.uece.br"
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: hub
              port:
                number: 8081
